入力フォーム追加

--- a/index.html
+++ b/index.html
@@ -15,9 +15,20 @@
     <section class="page-header">
       <h1 class="project-name">CookieTest</h1>
       <h2 class="project-tagline"></h2>
+      <form name="in">
+          <input class=".main-content input" type="text" id="id_auIdTxt" maxlength="30" value="">
+      </form>
+      <h2 class="project-tagline"></h2>
+      <a class="btn" id="id_loginBtn" onClick="onLogin()">Login</a>
+      <a class="btn" id="id_logoutBtn" onClick="onLogout()" style="display:none">Logout</a>
+      <h2 class="project-tagline"></h2>
+
       <a class="btn" onClick="onWrite()">Write</a>
       <a class="btn" onClick="onRead()">Read</a>
+      <a class="btn" onClick="onDelete()">Delete</a>
+      <h2 class="project-tagline"></h2>
       <a href="sub_index.html" target="_blank" class="btn">New Window</a>
-    </section>  
+    </section>
   </body>
+
 </html>
