--- a/sub_index.html
+++ b/sub_index.html
@@ -13,10 +13,11 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">CookieTest</h1>
+      <h1 class="project-name">SubCookieTest</h1>
       <h2 class="project-tagline"></h2>
       <a class="btn" onClick="onWrite()">Write</a>
       <a class="btn" onClick="onRead()">Read</a>
+      <a class="btn" onClick="onDelete()">Delete</a>
     </section>  
   </body>
 </html>
