フォルダ構成変更/プログレス追加

--- a/index.html
+++ b/index.html
@@ -1,34 +1,59 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  <head>
-    <script src="main.js"></script>
-    <script src="cookie-util.js"></script>
-    <meta charset="UTF-8">
-    <title>Kytest by Web-Push</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
-  </head>
-  <body>
-    <section class="page-header">
-      <h1 class="project-name">CookieTest</h1>
-      <h2 class="project-tagline"></h2>
-      <form name="in">
-          <input class=".main-content input" type="text" id="id_auIdTxt" maxlength="30" value="">
-      </form>
-      <h2 class="project-tagline"></h2>
-      <a class="btn" id="id_loginBtn" onClick="onLogin()">Login</a>
-      <a class="btn" id="id_logoutBtn" onClick="onLogout()" style="display:none">Logout</a>
-      <h2 class="project-tagline"></h2>
+    <head>
+        <!-- JavaScript読み込み -->
+        <script src="js/cookie-util.js"></script>
+        <meta charset="UTF-8">
+        <title>Kytest by Web-Push</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- CSS読み込み -->
+        <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
+        <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+        <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+        <!-- particles用のCSS読み込み -->
+        <link rel="stylesheet" type="text/css" href="stylesheets/progress.css" media="screen">
 
-      <a class="btn" onClick="onWrite()">Write</a>
-      <a class="btn" onClick="onRead()">Read</a>
-      <a class="btn" onClick="onDelete()">Delete</a>
-      <h2 class="project-tagline"></h2>
-      <a href="sub_index.html" target="_blank" class="btn">New Window</a>
-    </section>
-  </body>
+        <!-- Include manifest file in the page -->
+        <link rel="manifest" href="manifest.json">
+    </head>
+    <body>
+        <section class="page-header">
+            <h1 class="project-name">CookieTest</h1>
+            <h2 class="project-tagline"></h2>
+            <!-- ID入力フォーム -->
+            <form name="in">
+                <input class=".main-content input" type="text" id="id_auIdTxt" maxlength="30" value="">
+            </form>
+            <h2 class="project-tagline"></h2>
+            <!-- ログイン系ボタン -->
+            <a class="btn" id="id_loginBtn" onClick="onLogin()">Login</a>
+            <a class="btn" id="id_logoutBtn" onClick="onLogout()" style="display:none">Logout</a>
 
+            <h2 class="project-tagline"></h2>
+
+            <!-- その他各種ボタン -->
+            <a class="btn" onClick="onWrite()">Write</a>
+            <a class="btn" onClick="onRead()">Read</a>
+            <a class="btn" onClick="onDelete()">Delete</a>
+            <h2 class="project-tagline"></h2>
+            <a href="sub_index.html" target="_blank" class="btn">New Window</a>
+        </section>
+
+        <div id="id_loader" style="display:none"></div>
+
+        <!-- ServiceWorker用のJavaScript読み込み -->
+        <script src="config.js"></script>
+        <script src="main.js"></script>
+        <script>
+            /* jshint ignore:start */
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+              (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+              m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+            ga('create', 'UA-53563471-1', 'auto');
+            ga('send', 'pageview');
+            /* jshint ignore:end */
+        </script>
+    </body>
 </html>
