--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <!-- JavaScript読み込み -->
         <script src="js/cookie-util.js"></script>
+        <script type="text/javascript" src="js/KiiSDK.js"></script>
         <meta charset="UTF-8">
         <title>Kytest by Web-Push</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -40,6 +41,9 @@
         <!-- particles要のJavaScript読み込み -->
         <script src="js/particles.min.js"></script>
         <script src="js/app.js"></script>
+
+        <!-- Kii Cloud用のJavaScript読み込み -->
+        <script src="js/kii-controll.js"></script>
 
         <!-- ServiceWorker用のJavaScript読み込み -->
         <script src="config.js"></script>
