Serviceworkerが解除できてなかったので修正 ついでにページのタイトルを変更

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <meta charset="UTF-8">
 
-    <title>yt-test by Web-Push</title>
+    <title>k_y_test by Web-Push</title>
 
     <!-- Include manifest file in the page -->
     <link rel="manifest" href="manifest.json">
